# cisd-lahpc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  drawCurve.py  install.sh  launchTestPerf.sh  my_lapack.c
algonum/: algonum-env.sh
algonum/include/: algonum.h
algonum/myblas/: CMakeLists.txt  mygemm.c  mygetrf.c
lib/: CMakeLists.txt  Mat.cpp  Mat.h  Summa.cpp  Summa.hpp  err.h  my_lapack.cpp  my_lapack.h  my_lapack_mpi.cpp  my_lapack_omp.cpp  my_lapack_seq.cpp  util.cpp  util.h
lib_ocv/: CMakeLists.txt
lib_omp/: CMakeLists.txt  Vec.h  err.h  my_lapack.h
lib_seq/: CMakeLists.txt  my_lapack.cpp  util.h
perf/: CMakeLists.txt  benchmark.cpp  drawCurve.py
scripts/: backup_benchmark.sh  benchmark.sh  drawCurve.py  install.sh  install_plafrim.sh  launchTestPerf.sh
src/: ddot.c  main.c  my_lapack.c  my_lapack.h  util.c  util.h
test/: CMakeLists.txt  benchmark.cpp  driver.cpp  test_algonum.cpp  test_perf.c  test_perf.cpp  test_valid.cpp
tp4/: CMakeLists.txt
tp4/algonum/: CMakeLists.txt
tp4/myblas/: CMakeLists.txt  codelet_dgemm.c  codelet_dtrsm.c  mygetrf.c
tp4/testings/: CMakeLists.txt
